fix(detaillist): small style fixes to align with lot placard

--- a/src/patterns/DetailList/_detailList.scss
+++ b/src/patterns/DetailList/_detailList.scss
@@ -3,7 +3,7 @@
 .#{$px}-detail-list {
   display: flex;
   flex-direction: column;
-  gap: $spacing-sm;
+  margin: 0;
 
   &-wrapper {
     .#{$px}-detail {
